fixed horizontal scroll and margins

--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -20,10 +20,11 @@
     width: 100%;
     font-weight: 400;
     text-align: left;
-    max-width: 320px;
+    max-width: 286px;
     padding-top: 48px;
     padding-bottom: 36px;
     padding-left: 17px;
+    margin: 0;
   }
 
   .footer__copyright {
