--- a/blocks/page.css
+++ b/blocks/page.css
@@ -17,11 +17,10 @@
   max-width: 1280px;
   padding-left: 17px;
   padding-right: 17px;
-  overflow-x: hidden;
 }
 
 @media screen and (max-width: 480px) {
   .page__section {
-    padding-bottom: 27.6px;
+    padding-bottom: 10px;
   }
 }
