--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -116,55 +116,39 @@
     padding-top: 42px;
   }
 
-  .profile__info {
-    flex-wrap: wrap;
-    align-items: center;
-    width: 100%;
-    padding-bottom: 36px;
-  }
-
-  .profile__image {
-    text-align: center;
-    margin: 0;
-  }
-
   .profile__title {
     flex: 1;
     margin: 0;
-    text-align: center;
     font-size: 22px;
     line-height: 26.63px;
     padding-top: 26.25px;
     padding-left: 196px;
     width: 219px;
-    padding-right: 10px 
+    padding-right: 10px;
     align-self: center;
   }
 
   .profile__description {
-    text-align: center;
     font-size: 14px;
     line-height: 16.94px;
+    width: 286px;
+    padding-left: 164px;
   }
 
   .profile__add-button {
     margin: 0;
     width: 282px;
     height: 50px;
-    border: 2px solid #fff;
-    border-radius: 2px;
-    cursor: pointer;
     padding-top: 36px;
-  }
-
-  .profile__add-button:hover {
-    opacity: 0.6;
   }
 
   .profile__edit-button {
     width: 18px;
     height: 18px;
     align-self: flex-end;
-    margin-right: 176px /* testing to see if this works. erase if needed */
+  }
+
+  .profile__info {
+    justify-content: end;
   }
 }
